--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ buildscript {
 
 plugins {
 	id 'nebula.lint' version '8.3.1'
+    id 'com.github.kt3k.coveralls' version '2.8.1'
+    id 'info.solidsoft.pitest' version '1.1.11'
+    id 'net.saliman.cobertura' version '2.4.0'
 }
 
 group 'org.vbrandl'
@@ -72,3 +75,10 @@ pmd {
     toolVersion = '5.7.0'
     ruleSetFiles = files('config/pmd/pmd-all-java.xml')
 }
+
+pitest {
+    timestampedReports = false
+    outputFormats = ['XML']
+}
+
+cobertura.coverageFormats = ['html', 'xml'] // coveralls plugin depends on xml format report
