--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,9 @@ buildscript {
 
 plugins {
 	id 'nebula.lint' version '8.3.1'
-    id 'com.github.kt3k.coveralls' version '2.8.1'
-    id 'info.solidsoft.pitest' version '1.1.11'
-    id 'net.saliman.cobertura' version '2.4.0'
+    id 'com.github.kt3k.coveralls' version '2.8.2'
+    id 'net.saliman.cobertura' version '2.5.2'
+    id 'com.github.ben-manes.versions' version '0.17.0'
 }
 
 group 'org.vbrandl'
@@ -43,6 +43,7 @@ gradleLint {
 
 dependencies {
     testCompile 'junit:junit:[4.12,5.0)'
+    testRuntime 'org.slf4j:slf4j-api:1.7.10' // needed for cobertura
 }
 
 jar {
@@ -74,11 +75,6 @@ checkstyle {
 pmd {
     toolVersion = '5.7.0'
     ruleSetFiles = files('config/pmd/pmd-all-java.xml')
-}
-
-pitest {
-    timestampedReports = false
-    outputFormats = ['XML']
 }
 
 cobertura.coverageFormats = ['html', 'xml'] // coveralls plugin depends on xml format report
