--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,11 @@ buildscript {
 }
 
 plugins {
-	id 'nebula.lint' version '8.3.1'
-    id 'com.github.kt3k.coveralls' version '2.8.2'
-    id 'net.saliman.cobertura' version '2.5.2'
     id 'com.github.ben-manes.versions' version '0.17.0'
+    id 'com.github.kt3k.coveralls' version '2.8.2'
+    id 'info.solidsoft.pitest' version '1.2.4'
+    id 'nebula.lint' version '8.3.1'
+    id 'net.saliman.cobertura' version '2.5.2'
 }
 
 group 'org.vbrandl'
@@ -78,3 +79,8 @@ pmd {
 }
 
 cobertura.coverageFormats = ['html', 'xml'] // coveralls plugin depends on xml format report
+
+pitest {
+    timestampedReports = false
+    outputFormats = ['XML']
+}
